[project]
name = "cvxmarkowitz"
version = "0.0.0"
description = "Markowitz"
authors = [{name = "Thomas Schmelzer", email = "thomas.schmelzer@gmail.com"},
    {name = "Kasper Johansson"},
    {name = "Philipp Schiele"},
    {name = "Stephen Boyd"}]

readme = "README.md"
license = "Apache-2.0"
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
]

#authors = ["Thomas Schmelzer", "Kasper Johansson", "Philipp Schiele", "Stephen Boyd"]
#readme = "README.md"
requires-python = ">=3.11"
# Private :: Do Not Upload (prevents rhiza_release.yml from publishing to PyPI)
dependencies = [
    "cvxpy-base>=1.9.0",
    "numpy>=2.4.6",
    "clarabel",
    "cvx-linalg==0.6.1"
]

[project.urls]
Homepage = "https://github.com/cvxgrp/cvxmarkowitz"
Repository = "https://github.com/cvxgrp/cvxmarkowitz"

[dependency-groups]
dev = [
    "fire",
    "mock",
    "yfinance",
    "loguru",
    "tinycta",
    "plotly",
    "cvxsimulator",
    "scikit-learn",
    "marimo",
    "pytest>=9.0.3",
]
test = [
    "pytest>=9.0.3",
]
lint = [
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cvxmarkowitz"]

[tool.deptry.per_rule_ignores]
DEP002 = ["cvxpy-base", "clarabel", "cvx-linalg"]
DEP001 = ["cvx", "cvxpy"]
