[project]
name = "cvxmarkowitz"
version = "0.0.1"
description = "Markowitz"
authors = [{name = "Thomas Schmelzer", email = "thomas.schmelzer@gmail.com"},
    {name = "Kasper Johansson"},
    {name = "Philipp Schiele"},
    {name = "Stephen Boyd"}]

readme = "README.md"
license = "Apache-2.0"
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
]

#authors = ["Thomas Schmelzer", "Kasper Johansson", "Philipp Schiele", "Stephen Boyd"]
#readme = "README.md"
requires-python = ">=3.11"
# Private :: Do Not Upload (prevents rhiza_release.yml from publishing to PyPI)
dependencies = [
    "cvxpy-base>=1.9.2",
    "numpy>=2.4.6",
    "clarabel>=0.11.1",
    "cvx-linalg==0.8.0"
]

[project.urls]
Homepage = "https://github.com/cvxgrp/cvxmarkowitz"
Repository = "https://github.com/cvxgrp/cvxmarkowitz"

[dependency-groups]
dev = [
    "fire>=0.7.1",
    "mock>=5.2.0",
    "yfinance>=1.4.1",
    "loguru>=0.7.3",
    "tinycta>=0.13.3",
    "plotly>=6.8.0",
    "cvxsimulator>=1.5.1",
    "scikit-learn>=1.9.0",
    "marimo>=0.23.11",
    "pytest>=9.1.1",
]
test = [
    "pytest>=9.1.1",
]
lint = [
    "ruff>=0.15.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cvxmarkowitz"]

[tool.deptry.per_rule_ignores]
DEP002 = ["cvxpy-base", "clarabel", "cvx-linalg"]
DEP001 = ["cvx", "cvxpy"]

[tool.mypy]
# cvxpy ships an incomplete py.typed surface: its functional atoms
# (cp.norm2, cp.sum, cp.abs, cp.hstack, ...) are exported dynamically and are
# invisible to static analysis, so `mypy --strict` reports spurious
# attr-defined / no-any-return / no-untyped-call errors at every cvxpy call
# site. Treat cvxpy as untyped so those expressions resolve to Any.
[[tool.mypy.overrides]]
module = ["cvxpy", "cvxpy.*"]
follow_imports = "skip"
follow_imports_for_stubs = true
ignore_missing_imports = true
